fixed image url issue and added expand collapse function to cards

--- a/main.css
+++ b/main.css
@@ -120,7 +120,7 @@ form div {
   text-align: justify;
 }
 
-#expand {
+.expand {
   cursor: pointer;
   clear: both;
   margin: 0;
